welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: value cpt is not a member of Unit
possible cause: maybe a semicolon is missing before `value cpt'?
    }    cpt = cpt+1;
         ^ColumnByColumn:13: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
    ecritMessage()
    ^